added missing name to session info

--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -5,6 +5,9 @@
     <ion-input label="ID" labelPlacement="stacked" [value]="session.id" [readonly]="true"></ion-input>
   </ion-item>
   <ion-item>
+    <ion-input label="Name" labelPlacement="stacked" [value]="session.name" [readonly]="true"></ion-input>
+  </ion-item>
+  <ion-item>
     <ion-input label="Status" labelPlacement="stacked" [value]="session.status" [readonly]="true"></ion-input>
   </ion-item>
   <ion-item>
