--- a/src/app/session/feature/main/main.page.html
+++ b/src/app/session/feature/main/main.page.html
@@ -19,31 +19,31 @@
 
   <div id="container">
 
-    <div *ngIf="currentSession$ | async as session;else noSession">
+    <div *ngIf="vm$ | async as vm;else noSession">
 
       <ion-segment value="session-info" [(ngModel)]="type">
         <ion-segment-button value="session-info">
           <ion-label>Session</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="user-action" *ngIf="!isSessionHost(session)">
+        <ion-segment-button value="user-action" *ngIf="!isSessionHost(vm.session)">
           <ion-label>User</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="message-center" *ngIf="user || isSessionHost(session)">
+        <ion-segment-button value="message-center" *ngIf="user || isSessionHost(vm.session)">
           <ion-label>Message Center</ion-label>
         </ion-segment-button>
       </ion-segment>
 
-      <div [ngSwitch]="type" *ngIf="hubConnection$ | async as hubConnection">
+      <div [ngSwitch]="type">
         <div *ngSwitchCase="'session-info'">
-          <app-session-info [session]="session"></app-session-info>
-          <app-user-info [session]="session"></app-user-info>
+          <app-session-info [session]="vm.session"></app-session-info>
+          <app-user-info [session]="vm.session"></app-user-info>
         </div>
         <div *ngSwitchCase="'user-action'">
-          <app-user [session]="session" [user]="user" [hubConnection]="hubConnection" (userChange)="setUser($event)"
+          <app-user [session]="vm.session" [user]="user" [hubConnection]="vm.connection" (userChange)="setUser($event)"
             #userView></app-user>
         </div>
         <div *ngSwitchCase="'message-center'">
-          <app-message-center [session]="session" [user]="user" [messages]="messages"></app-message-center>
+          <app-message-center [session]="vm.session" [user]="user" [messages]="messages"></app-message-center>
         </div>
       </div>
     </div>
