--- a/src/app/session/feature/main/main.page.html
+++ b/src/app/session/feature/main/main.page.html
@@ -28,7 +28,7 @@
         <ion-segment-button value="user-action" *ngIf="!vm.isSessionHost">
           <ion-label>User</ion-label>
         </ion-segment-button>
-        <ion-segment-button value="message-center" *ngIf="user || vm.isSessionHost">
+        <ion-segment-button value="message-center" *ngIf="vm.user || vm.isSessionHost">
           <ion-label>Message Center</ion-label>
         </ion-segment-button>
       </ion-segment>
@@ -39,11 +39,11 @@
           <app-user-info [session]="vm.session"></app-user-info>
         </div>
         <div *ngSwitchCase="'user-action'">
-          <app-user [session]="vm.session" [user]="user" [hubConnection]="vm.connection" (userChange)="setUser($event)"
-            #userView></app-user>
+          <app-user [session]="vm.session" [user]="vm.user" [hubConnection]="vm.connection"
+            (userChange)="vm.user = $event" #userView></app-user>
         </div>
         <div *ngSwitchCase="'message-center'">
-          <app-message-center [session]="vm.session" [user]="user" [messages]="messages"></app-message-center>
+          <app-message-center [session]="vm.session" [user]="vm.user" [messages]="messages"></app-message-center>
         </div>
       </div>
     </div>
