icon instead of text, allowed "enter" on register session

--- a/src/app/session/ui/input-session/input-session.component.html
+++ b/src/app/session/ui/input-session/input-session.component.html
@@ -1,7 +1,8 @@
 <h2>Register Session</h2>
-<ion-item>
+<ion-item *ngIf="nameControl$ | async as name">
   <ion-input label="Session Name" labelPlacement="stacked" placeholder="Enter session name"
-    [formControl]="nameControl"></ion-input>
-  <ion-button fill="clear" slot="end" (click)="nameChange.emit(name)" [disabled]="nameControl.invalid"
-    *ngIf="nameControl$ | async as name">Register</ion-button>
+    (keyup.enter)="nameChange.emit(name)" [formControl]="nameControl"></ion-input>
+  <ion-button fill="clear" slot="end" (click)="nameChange.emit(name)" [disabled]="nameControl.invalid">
+    <ion-icon name="log-in-outline"></ion-icon>
+  </ion-button>
 </ion-item>
